# Chronos-calendar

./: .gitignore  .mcp.json  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: mcp-service.md  structure.md
scripts/: generate-ico.cjs
src/: App.vue  board-entry.ts  board.html  note-entry.ts  note.html  search-entry.ts  search.html  settings-entry.ts  settings.html  styles.css  task-entry.ts  task.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs  windows.rs
src-tauri/src/commands/: app.rs  database.rs  mod.rs  window.rs
src-tauri/src/db/: backup.rs  cell.rs  main_task.rs  manager.rs  mod.rs  note.rs  schedule.rs  stats.rs  types.rs
src-tauri/src/mcp/: database.rs  mod.rs  server.rs  service.rs  tools.rs  types.rs
src/api/: database.ts
src/components/: BatchTaskDialog.vue  BoardWindow.vue  CalendarCell.vue  CalendarGrid.vue  CalendarHeader.vue  ColorPicker.vue  CommonSettings.vue  DescriptionDialog.vue  DropdownMenu.vue  ImportDialog.vue  ListItem.vue  MiniCalendar.vue  ModeSettings.vue  NoteWindow.vue  ResizeHandles.vue  ScheduleEditor.vue  ScheduleItem.vue  ScheduleTooltip.vue  SettingsPanel.vue  SliderControl.vue  TaskWindow.vue  ToastContainer.vue
src/components/calendar/: CalendarCell.vue  CalendarGrid.vue  CalendarHeader.vue  MiniCalendar.vue
src/components/dialogs/: BatchTaskDialog.vue  DescriptionDialog.vue
src/components/ui/: ColorPicker.vue  DropdownMenu.vue  (+4 more)
src/composables/: useContextMenu.ts  useDatabase.ts  useEditHistory.ts  useFonts.ts  useImport.ts  useScheduleUndo.ts  useSchedules.ts  useSettings.ts  useSystemTheme.ts  useToast.ts  useUndoHistory.ts
src/constants/: index.ts
src/types/: index.ts  schedule.ts
src/utils/: color.ts  date.ts  export.ts  window.ts
src/windows/: BasicSettings.vue  BoardWindow.vue  CommonSettings.vue  ModeSettings.vue  NoteWindow.vue  PageSettings.vue  SearchWindow.vue  SettingsPanel.vue  TaskWindow.vue
(+11 files in other folders)
