[package]
name = "chronos"
version = "0.1.0"
description = "A modern desktop calendar assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "chronos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chronos"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # 发生 panic 时直接退出，减少错误处理代码
codegen-units = 1 # 优化程度更高
lto = true # 开启链接时优化 (Link Time Optimization)
opt-level = "s" # 针对二进制大小进行优化 (或使用 "z")
strip = true # 移除符号表和调试信息 (Tauri v1.5+ 支持)
