[package]
name = "chronos"
version = "0.1.0"
description = "A modern desktop calendar assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "chronos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chronos"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
font-kit = "0.14"

[profile.release]
panic = "abort" 
codegen-units = 1 
lto = true 
opt-level = "s" 
strip = true 

# 仅在 Windows 平台下编译引入此依赖，用于调用系统 API (如窗口层级置底)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse"
] }
